I added scss styles to the application

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,13 +1,16 @@
+@import "modules/app.scss";
+@import "modules/buttons.scss";
+@import "modules/glass.scss";
 @import "~normalize.css";
 
-@import "_variables";
-@import "modules/hello.scss";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
 
 body {
-  background: $wtf;
+  background: #3767AD;
   color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
 }
